--- a/OLX-Login/pom.xml
+++ b/OLX-Login/pom.xml
@@ -101,6 +101,13 @@
 			<artifactId>modelmapper</artifactId>
 			<version>2.4.4</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-config-client</artifactId>
+			<version>3.0.5</version>
+		</dependency>
+		
 
 	</dependencies>
 
